--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,                                
     "skipLibCheck": true,
     "outDir": "dist",
-    "moduleResolution": "Node",
+    "moduleResolution": "Node"
   },
 }
